syntax = "proto3";

package pb;

option go_package = "github.com/PYTNAG/iasked/pb";

message CreateUserRequest {
    string email = 1;
    string password = 2;
    optional string username = 3;
}

message CreateUserResponse {
    int32 id = 1;
}